# Revenue-Intelligence-System

./: .gitignore  .pre-commit-config.yaml  Makefile  PRD.md  README.md  pyproject.toml  requirements.txt  train.py
.streamlit/: config.toml
api/: __init__.py  main.py
api/routes/: __init__.py  deals.py  forecast.py  health.py
api/schemas/: __init__.py  deal.py  forecast.py
api/services/: __init__.py  explainer_service.py
app/: __init__.py  config.py  main.py
app/components/: __init__.py  deal_table.py  forecast_chart.py  metrics_card.py  risk_badge.py
app/pages/: 01_Risk_Dashboard.py  01_🎯_Risk_Dashboard.py  02_Deal_Detail.py  02_Deal_Details.py  02_🔍_Deal_Details.py  03_Forecast.py  03_📈_Forecast.py
app/services/: __init__.py  data_loader.py  risk_calculator.py
core/: __init__.py
core/data/: __init__.py  database.py  features.py  preprocessor.py
core/explanations/: __init__.py  shap_explainer.py
core/forecasting/: __init__.py  revenue_forecast.py
core/scoring/: __init__.py  risk_scorer.py
data/predictions/: latest_predictions.csv  predictions_metadata.json
database/: schema.sql
database/migrations/: README.md
database/seeds/: README.md  seed_demo_data.py  seed_via_sql.sql
dataset/: README.md
dataset/dataset_backup/: README.md  Sales Pipeline_backup.csv
docker/: Dockerfile  Dockerfile.api  Dockerfile.trainer  docker-compose.yml
experiments/: .gitkeep  runs.json
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.ts  router.ts  style.css
models/: __init__.py
models/artifacts/: .gitkeep
models/evaluation/: __init__.py  business_metrics.py  evaluate.py
models/inference/: __init__.py  predict.py
notebooks/: 01_data_exploration.ipynb
plan/: 00_ROADMAP.md  01_PHASE_0_FOUNDATION.md  02_PHASE_1A_ML_PIPELINE.md  03_PHASE_1B_STREAMLIT_UI.md  04_PHASE_1C_POLISH.md  05_PHASE_2_VUE_REFACTOR.md  06_DATA_SPEC.md  07_MODEL_SPEC.md  PROGRESS.md
scripts/: setup.ps1  setup.sh
tests/: __init__.py  test_database.py
(+123 files in other folders)
